added country ETFs

--- a/04_ETPs.ipynb
+++ b/04_ETPs.ipynb
@@ -4,13 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.1 Adding ETPs\n",
-    "We now only have a list of stocks. But we might also want to trade SPY, TLT or VXX. This section will append the <code>tickers_v2.csv</code> with a selection of ETPs to create <code>tickers_v3.csv</code>. Indices such as the VIX may also be of interest although Polygon does not have it. For these special cases, we will manually append them. We will add a prefix to non-tradeable tickers, so VIX and SPX become $VIX and $SPX. I am only interested in a selection of ETPs and indices; these were found by taking the most liquid ETF in its category at [etfdb.com](etfdb.com).\n",
+    "# Adding ETPs\n",
+    "We now only have a list of stocks. But we might also want to trade SPY, TLT or VXX. I am only interested in a selection of ETPs and indices; these were found by taking the most liquid ETF in its category at [etfdb.com](etfdb.com).\n",
     "\n",
     "* Size ETFs: \"SPY\", \"IJH\", \"IJR\", \n",
     "    * Large-cap, Mid-cap, Small-cap, \n",
     "* Bond ETFs: \"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" \n",
     "    * risk-free (1-3M, 1-3Y, 7-10Y, 20+Y), corporate (Overnight, 1-5Y, 5-10Y, 10-25Y)\n",
+    "* Country ETFs: 'EWA', 'EWO', 'EWK', 'EWC', 'EWQ', 'EWG', 'EWH', 'EWI', 'EWJ', 'EWM', 'EWW', 'EWN', 'EWS', 'EWP', 'EWD', 'EWL', 'EWU'\n",
+    "    * The iShares ETFs that were released before 2000 and thus have a very long history of data. Often the most liquid.\n",
     "* Sector ETFs: \"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"\n",
     "    * The sectors that Finviz also uses.\n",
     "* Commodity ETFs \"GLD\", \"SLV\"\n",
@@ -18,14 +20,12 @@
     "* Volatility ETPs: \"VXX\", \"UVIX\", \"SVIX\", \"SVXY\"\n",
     "    * Long, Long 2X, Short 1x, Short 0.5x (1x before and including 2018-02-27)\n",
     "\n",
-    "The only non-ETP index that I am interested in is the VIX. I will manually download daily VIX data from Yahoo and name it $VIX and set the type to INDEX. I could not find free 1-minute data. For simplicity I will just put this in the Polygon folder and not in a seperate Yahoo folder.\n",
-    "\n",
     "*Note: ETPs is an umbrella term for ETFs, ETVs and ETNs. However most investors just refer to them as 'ETFs'.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "size_ETFs = [\"SPY\", \"IJH\", \"IJR\"]\n",
     "bond_ETFs = [\"BIL\", \"SHY\", \"IEF\", \"TLT\", \"JPST\", \"VCSH\", \"VCIT\", \"VCLT\" ]\n",
     "sector_ETFs = [\"XLE\", \"XLU\", \"XLK\", \"XLB\", \"XLP\", \"XLY\", \"XLC\", \"XLV\", \"XLF\", \"XLRE\"]\n",
+    "country_ETFs = ['EWA', 'EWO', 'EWK', 'EWC', 'EWQ', 'EWG', 'EWH', 'EWI', 'EWJ', \\\n",
+    "    'EWM', 'EWW', 'EWN', 'EWS', 'EWP', 'EWD', 'EWL', 'EWU']\n",
     "commodity_ETFs = [\"GLD\", \"SLV\"]\n",
     "volatility_ETFs = [\"VXX\", \"UVIX\", \"SVIX\", \"SVXY\"]\n",
-    "all_ETFs = size_ETFs + bond_ETFs + sector_ETFs + commodity_ETFs + volatility_ETFs"
+    "all_ETFs = size_ETFs + bond_ETFs + sector_ETFs + country_ETFs + commodity_ETFs + volatility_ETFs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -122,26 +124,26 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>IEF</td>\n",
-       "      <td>iShares 7-10 Year Treasury Bond ETF</td>\n",
+       "      <td>EWA</td>\n",
+       "      <td>iShares MSCI Australia ETF</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ETF</td>\n",
-       "      <td>0001179444</td>\n",
-       "      <td>BBG000BHR296</td>\n",
+       "      <td>0000930667</td>\n",
+       "      <td>BBG000BDNJ29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>IJH</td>\n",
-       "      <td>iShares Core S&amp;P Mid-Cap ETF</td>\n",
+       "      <td>EWC</td>\n",
+       "      <td>iShares MSCI Canada ETF</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>ETF</td>\n",
        "      <td>0001100663</td>\n",
-       "      <td>BBG000BWC7P0</td>\n",
+       "      <td>BBG000BJSXB0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,16 +152,16 @@
       "text/plain": [
        "   ID ticker                                 name  active  start_date  \\\n",
        "0 NaN    BIL  SPDR Bloomberg 1-3 Month T-Bill ETF    True         NaN   \n",
-       "1 NaN    IEF  iShares 7-10 Year Treasury Bond ETF    True         NaN   \n",
-       "2 NaN    IJH         iShares Core S&P Mid-Cap ETF    True         NaN   \n",
+       "1 NaN    EWA           iShares MSCI Australia ETF    True         NaN   \n",
+       "2 NaN    EWC              iShares MSCI Canada ETF    True         NaN   \n",
        "\n",
        "   end_date type         cik composite_figi  \n",
        "0       NaN  ETF  0001064642   BBG000RFQSH8  \n",
-       "1       NaN  ETF  0001179444   BBG000BHR296  \n",
-       "2       NaN  ETF  0001100663   BBG000BWC7P0  "
+       "1       NaN  ETF  0000930667   BBG000BDNJ29  \n",
+       "2       NaN  ETF  0001100663   BBG000BJSXB0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,28 +217,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, manually add a ^VIX."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tickers_ETP.loc[len(tickers_ETP)] = f'$VIX-{START_DATE.isoformat()}', '$VIX', 'VIX Index', True, START_DATE, END_DATE, 'INDEX', np.NaN, np.NaN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "We need to manually change VXX and UVIX start date. The <code>get_ticker_events</code> is incorrect."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,12 +234,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then add the ETPs to <code>tickers_v2</code> to get <code>tickers_v3</code>."
+    "I will call everything an 'ETF' for simplicity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers_ETP['type'] = 'ETF'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -290,58 +285,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8628</th>\n",
-       "      <td>GLD-2019-06-01</td>\n",
+       "      <th>8698</th>\n",
+       "      <td>XLY-2019-06-03</td>\n",
+       "      <td>XLY</td>\n",
+       "      <td>Consumer Discretionary Select Sector SPDR Fund</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2019-06-03</td>\n",
+       "      <td>2024-04-15</td>\n",
+       "      <td>ETF</td>\n",
+       "      <td>0001064641</td>\n",
+       "      <td>BBG000BJ1MF9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8699</th>\n",
+       "      <td>GLD-2019-06-03</td>\n",
        "      <td>GLD</td>\n",
        "      <td>SPDR Gold Trust, SPDR Gold Shares</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-01</td>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>ETV</td>\n",
+       "      <td>2019-06-03</td>\n",
+       "      <td>2024-04-15</td>\n",
+       "      <td>ETF</td>\n",
        "      <td>0001222333</td>\n",
        "      <td>BBG000CRF6Q8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8629</th>\n",
-       "      <td>SLV-2019-06-01</td>\n",
+       "      <th>8700</th>\n",
+       "      <td>SLV-2019-06-03</td>\n",
        "      <td>SLV</td>\n",
        "      <td>iShares Silver Trust</td>\n",
        "      <td>True</td>\n",
-       "      <td>2019-06-01</td>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>ETV</td>\n",
+       "      <td>2019-06-03</td>\n",
+       "      <td>2024-04-15</td>\n",
+       "      <td>ETF</td>\n",
        "      <td>0001330568</td>\n",
        "      <td>BBG000NDCRW7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8630</th>\n",
-       "      <td>$VIX-2019-06-01</td>\n",
-       "      <td>$VIX</td>\n",
-       "      <td>VIX Index</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2019-06-01</td>\n",
-       "      <td>2024-03-01</td>\n",
-       "      <td>INDEX</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   ID ticker                               name  active  \\\n",
-       "8628   GLD-2019-06-01    GLD  SPDR Gold Trust, SPDR Gold Shares    True   \n",
-       "8629   SLV-2019-06-01    SLV               iShares Silver Trust    True   \n",
-       "8630  $VIX-2019-06-01   $VIX                          VIX Index    True   \n",
+       "                  ID ticker                                            name  \\\n",
+       "8698  XLY-2019-06-03    XLY  Consumer Discretionary Select Sector SPDR Fund   \n",
+       "8699  GLD-2019-06-03    GLD               SPDR Gold Trust, SPDR Gold Shares   \n",
+       "8700  SLV-2019-06-03    SLV                            iShares Silver Trust   \n",
        "\n",
-       "      start_date    end_date   type         cik composite_figi  \n",
-       "8628  2019-06-01  2024-03-01    ETV  0001222333   BBG000CRF6Q8  \n",
-       "8629  2019-06-01  2024-03-01    ETV  0001330568   BBG000NDCRW7  \n",
-       "8630  2019-06-01  2024-03-01  INDEX         NaN            NaN  "
+       "      active  start_date    end_date type         cik composite_figi  \n",
+       "8698    True  2019-06-03  2024-04-15  ETF  0001064641   BBG000BJ1MF9  \n",
+       "8699    True  2019-06-03  2024-04-15  ETF  0001222333   BBG000CRF6Q8  \n",
+       "8700    True  2019-06-03  2024-04-15  ETF  0001330568   BBG000NDCRW7  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,12 +360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "old_tickers_v3 = get_tickers(3)\n",
-    "ETPs = tickers_v3[tickers_v3['type'].isin(['ETF', 'ETV', 'ETN', 'INDEX'])]\n",
+    "ETPs = tickers_v3[tickers_v3['type'] == 'ETF']\n",
     "ETPs.loc[:, 'end_date'] = END_DATE # I assume that no ETFs got delisted/renamed.\n",
     "pd.concat([get_tickers(2), ETPs]).reset_index(drop=True).to_csv(\"../data/tickers_v3.csv\")"
    ]
