--- a/07_process.ipynb
+++ b/07_process.ipynb
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,170 +1423,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "There is no data for AAXN-2023-09-08\n",
-      "There is no data for ABIL-2023-09-08\n",
-      "There is no data for ACRV-2022-11-10\n",
-      "There is no data for ADOCR-2020-12-10\n",
-      "There is no data for AEON-2021-10-08\n",
-      "There is no data for AFB-2019-06-03\n",
-      "There is no data for AFC-2019-08-09\n",
-      "There is no data for AFCG-2021-02-11\n",
-      "There is no data for ALPX-2022-10-19\n",
-      "There is no data for AMDI-2024-02-13\n",
-      "There is no data for ASA-2019-06-03\n",
-      "There is no data for ASPI-2020-11-16\n",
-      "There is no data for AVK-2019-06-03\n",
-      "There is no data for AWF-2019-06-03\n",
-      "There is no data for AZTR-2023-05-24\n",
-      "There is no data for BBTpE.CL-2019-08-08\n",
-      "There is no data for BEP-2019-06-03\n",
-      "There is no data for BEP-2022-08-23\n",
-      "There is no data for BFRG-2023-01-26\n",
-      "There is no data for BFRG-2023-02-03\n",
-      "There is no data for BGX-2019-06-03\n",
-      "There is no data for BIP-2019-06-03\n",
-      "There is no data for BIP-2022-08-23\n",
-      "There is no data for BMLpL-2019-08-08\n",
-      "There is no data for BT-2023-09-08\n",
-      "There is no data for CBH-2019-06-03\n",
-      "There is no data for CCIH-2019-06-03\n",
-      "There is no data for CEE-2019-06-03\n",
-      "There is no data for CEM-2019-06-03\n",
-      "There is no data for CG-2020-01-02\n",
-      "There is no data for CHFS-2023-09-08\n",
-      "There is no data for CSSEL-2022-08-12\n",
-      "There is no data for DELT-2019-06-03\n",
-      "There is no data for DELT-2023-09-08\n",
-      "There is no data for DSM-2019-06-03\n",
-      "There is no data for DTF-2019-06-03\n",
-      "There is no data for DUC-2019-06-03\n",
-      "There is no data for DXR-2019-06-03\n",
-      "There is no data for DXR-2022-02-02\n",
-      "There is no data for EBR.B-2019-08-08\n",
-      "There is no data for EBR.B-2022-08-23\n",
-      "There is no data for ECC-2019-06-03\n",
-      "There is no data for EDD-2019-06-03\n",
-      "There is no data for EHI-2019-06-03\n",
-      "There is no data for EIC-2019-07-23\n",
-      "There is no data for EMD-2019-06-03\n",
-      "There is no data for EQS-2019-06-03\n",
-      "There is no data for EQS-2019-08-30\n",
-      "There is no data for ESBA-2019-06-03\n",
-      "There is no data for ESBA-2021-01-21\n",
-      "There is no data for FEO-2019-06-03\n",
-      "There is no data for FINS-2019-06-03\n",
-      "There is no data for FISK-2019-06-03\n",
-      "There is no data for FISK-2021-01-21\n",
-      "There is no data for FIV-2019-06-03\n",
-      "There is no data for FMO-2019-06-03\n",
-      "There is no data for FT-2019-06-03\n",
-      "There is no data for FUFU-2024-03-01\n",
-      "There is no data for GAM-2019-06-03\n",
-      "There is no data for GBAB-2019-06-03\n",
-      "There is no data for GDO-2019-06-03\n",
-      "There is no data for GFY-2019-06-03\n",
-      "There is no data for HKIT-2021-07-20\n",
-      "There is no data for HPI-2019-06-03\n",
-      "There is no data for HQH-2019-06-03\n",
-      "There is no data for HQL-2019-06-03\n",
-      "There is no data for HYMCZ-2020-09-01\n",
-      "There is no data for IGI-2019-06-03\n",
-      "There is no data for IINN-2021-04-01\n",
-      "There is no data for IKT-2020-11-11\n",
-      "There is no data for INB-2019-06-03\n",
-      "There is no data for IPOY-2020-09-18\n",
-      "There is no data for IPOY-2020-10-16\n",
-      "There is no data for IPOZ-2020-09-18\n",
-      "There is no data for IPOZ-2020-10-16\n",
-      "There is no data for JEWL-2022-11-15\n",
-      "There is no data for JHI-2019-06-03\n",
-      "There is no data for JHS-2019-06-03\n",
-      "There is no data for JUPW-2020-10-22\n",
-      "There is no data for KBSF-2023-09-08\n",
-      "There is no data for KKR-2020-05-18\n",
-      "There is no data for KLC-2021-11-17\n",
-      "There is no data for KSM-2019-06-03\n",
-      "There is no data for KTF-2019-06-03\n",
-      "There is no data for KYN-2019-06-03\n",
-      "There is no data for LDI-2021-02-03\n",
-      "There is no data for LEO-2019-06-03\n",
-      "There is no data for MAXR-2023-09-08\n",
-      "There is no data for MCC-2019-06-03\n",
-      "There is no data for MCC-2019-08-30\n",
-      "There is no data for MCN-2019-06-03\n",
-      "There is no data for MFGP-2023-09-08\n",
-      "There is no data for MGU-2019-06-03\n",
-      "There is no data for MHF-2019-06-03\n",
-      "There is no data for MMT-2019-06-03\n",
-      "There is no data for MMU-2019-06-03\n",
-      "There is no data for MNP-2019-06-03\n",
-      "There is no data for MOB-2022-06-23\n",
-      "There is no data for MRT-2019-06-03\n",
-      "There is no data for MTLp-2019-08-05\n",
-      "There is no data for MTLp-2022-08-23\n",
-      "There is no data for MTT-2019-06-03\n",
-      "There is no data for MVC-2019-06-03\n",
-      "There is no data for MVC-2019-08-30\n",
-      "There is no data for NBLX-2019-06-03\n",
-      "There is no data for NDACW-2021-04-22\n",
-      "There is no data for NRT-2019-06-03\n",
-      "There is no data for NRT-2022-08-23\n",
-      "There is no data for NUVO-2021-12-16\n",
-      "There is no data for NYX-2023-02-24\n",
-      "There is no data for OGCP-2019-06-03\n",
-      "There is no data for OGCP-2021-01-21\n",
-      "There is no data for PAI-2019-06-03\n",
-      "There is no data for PDT-2019-06-03\n",
-      "There is no data for PFD-2019-06-03\n",
-      "There is no data for PFO-2019-06-03\n",
-      "There is no data for PHCC-2021-07-28\n",
-      "There is no data for PHCF-2023-09-08\n",
-      "There is no data for PHD-2019-06-03\n",
-      "There is no data for PHT-2019-06-03\n",
-      "There is no data for PMM-2019-06-03\n",
-      "There is no data for PMO-2019-06-03\n",
-      "There is no data for PPR-2019-06-03\n",
-      "There is no data for PPT-2019-06-03\n",
-      "There is no data for PRMI-2019-06-26\n",
-      "There is no data for PRT-2019-06-03\n",
-      "There is no data for RGT-2019-06-03\n",
-      "There is no data for RMT-2019-06-03\n",
-      "There is no data for RNP-2019-06-03\n",
-      "There is no data for RQI-2019-06-03\n",
-      "There is no data for RSF-2019-06-12\n",
-      "There is no data for RVT-2019-06-03\n",
-      "There is no data for RXRAW-2021-04-26\n",
-      "There is no data for SAR-2019-06-03\n",
-      "There is no data for SAR-2019-08-30\n",
-      "There is no data for SBI-2019-06-03\n",
-      "There is no data for SEGR-2021-01-27\n",
-      "There is no data for SING-2023-12-22\n",
-      "There is no data for SOR-2019-06-03\n",
-      "There is no data for SQFT-2020-08-11\n",
-      "There is no data for STRNW-2021-11-09\n",
-      "There is no data for SVA-2019-06-03\n",
-      "There is no data for SVRE-2022-05-06\n",
-      "There is no data for SXTP-2023-06-21\n",
-      "There is no data for TCJH-2023-03-30\n",
-      "There is no data for TMKRW-2021-03-01\n",
-      "There is no data for TPET-2023-03-14\n",
-      "There is no data for TY-2019-06-03\n",
-      "There is no data for TYG-2019-06-03\n",
-      "There is no data for TYME-2023-09-08\n",
-      "There is no data for WCGC-2021-08-05\n",
-      "There is no data for WTMAR-2022-01-21\n",
-      "There is no data for YSACW-2020-12-08\n",
-      "There is no data for $VIX-2019-06-01\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pyarrow.parquet as pq\n",
     "\n",
@@ -1621,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1548,7 @@
        "2  2019-10-04  2019-06-03  2019-10-02   CS  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,14 +1569,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "153\n"
+      "1033\n"
      ]
     },
     {
@@ -1774,6 +1613,30 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>AACQ-2020-09-04</td>\n",
+       "      <td>AACQ</td>\n",
+       "      <td>Artius Acquisition Inc. Class A Common Stock</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2020-09-04</td>\n",
+       "      <td>2021-06-24</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>CS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>AAXN-2019-06-03</td>\n",
+       "      <td>AAXN</td>\n",
+       "      <td>Axon Enterprise, Inc. Common Stock</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2019-06-03</td>\n",
+       "      <td>2021-01-25</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>CS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>AAXN-2023-09-08</td>\n",
        "      <td>AAXN</td>\n",
@@ -1785,47 +1648,23 @@
        "      <td>NaT</td>\n",
        "      <td>CS</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>ABIL-2023-09-08</td>\n",
-       "      <td>ABIL</td>\n",
-       "      <td>Ability Inc Ordinary Shares</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2023-09-08</td>\n",
-       "      <td>2024-03-18</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>CS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>ACRV-2022-11-10</td>\n",
-       "      <td>ACRV</td>\n",
-       "      <td>Acrivon Therapeutics, Inc. Common Stock</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2022-11-10</td>\n",
-       "      <td>2022-11-11</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>CS</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  ID ticker                                     name  active  \\\n",
-       "26   AAXN-2023-09-08   AAXN       Axon Enterprise, Inc. Common Stock    True   \n",
-       "41   ABIL-2023-09-08   ABIL              Ability Inc Ordinary Shares   False   \n",
-       "110  ACRV-2022-11-10   ACRV  Acrivon Therapeutics, Inc. Common Stock   False   \n",
+       "                 ID ticker                                          name  \\\n",
+       "7   AACQ-2020-09-04   AACQ  Artius Acquisition Inc. Class A Common Stock   \n",
+       "25  AAXN-2019-06-03   AAXN            Axon Enterprise, Inc. Common Stock   \n",
+       "26  AAXN-2023-09-08   AAXN            Axon Enterprise, Inc. Common Stock   \n",
        "\n",
-       "     start_date    end_date start_data end_data type  \n",
-       "26   2023-09-08  2024-04-15        NaT      NaT   CS  \n",
-       "41   2023-09-08  2024-03-18        NaT      NaT   CS  \n",
-       "110  2022-11-10  2022-11-11        NaT      NaT   CS  "
+       "    active  start_date    end_date start_data end_data type  \n",
+       "7    False  2020-09-04  2021-06-24        NaT      NaT   CS  \n",
+       "25   False  2019-06-03  2021-01-25        NaT      NaT   CS  \n",
+       "26    True  2023-09-08  2024-04-15        NaT      NaT   CS  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1838,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
